--- a/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=spring-java20-jahangir-askerov
+
+server.port=8888
+spring.datasource.url=jdbc:mysql://localhost:3306/library
+spring.datasource.username=root
+spring.datasource.password=1234
