Lesson 16. JPA methods ( Spring boot )

--- a/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.application.name=spring-java20-jahangir-askerov
+spring.application.name = spring-java20-jahangir-askerov
 
-server.port=8888
-spring.datasource.url=jdbc:mysql://localhost:3306/library
-spring.datasource.username=root
-spring.datasource.password=1234
+server.port = 8888
+
+spring.datasource.url = jdbc:mysql://localhost:3306/library
+
+spring.datasource.username = root
+
+spring.datasource.password = 1234
+
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.show-sql = true
