--- a/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.password = 1234
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.show-sql = true
+
+logging.level.org.hibernate.SQL = debug
+
+logging.level.org.hibernate.type.descriptor.sql = trace
