--- a/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.show-sql = true
 logging.level.org.hibernate.SQL = debug
 
 logging.level.org.hibernate.type.descriptor.sql = trace
+
+spring.messages.basename=ValidationMessages
