Lesson 25. Feat: Complete user registration functionality

--- a/spring/spring-java20-jahangir-askerov/src/main/resources/ValidationMessages.properties
+++ b/spring/spring-java20-jahangir-askerov/src/main/resources/ValidationMessages.properties
@@ -4,4 +4,4 @@ zip.code.invalid.format = The zip code must be exactly 5 digits
 email.invalid.format = The email format is incorrect, please check and try again
 price.fraction.invalid = The fractional part for the price of the book can be a maximum of 2 digits
 pages.min = The book should contain at least {value} pages
-user.age.min = You must be at least {min} years old to buy or sell a book
+user.birthday = You must be at least {min} years old to buy or sell a book
