--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.application.name = spring-java20-jahangir-askerov
+spring.application.name = librarian-jahangir-askerov
 
 server.port = 8888
 
-spring.messages.basename = ValidationMessages
-
-spring.datasource.url = jdbc:mysql://localhost:3306/library
+spring.datasource.url = jdbc:mysql://localhost:3306/librarian
 
 spring.datasource.username = root
 
@@ -17,4 +15,3 @@ spring.jpa.show-sql = true
 logging.level.org.hibernate.SQL = debug
 
 logging.level.org.hibernate.type.descriptor.sql = trace
-
