feat: Add validations for password and entity constraints

--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name = librarian-jahangir-askerov
 
 server.port = 8888
 
+spring.messages.basename = ValidationMessages
+
 spring.datasource.url = jdbc:mysql://localhost:3306/librarian
 
 spring.datasource.username = root
