Lesson 25. feat : Add registration api's for librarian

--- a/spring/librarian-jahangir-askerov/src/main/resources/ValidationMessages.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/ValidationMessages.properties
@@ -4,3 +4,4 @@ field.length.invalid = This field must be between {min} and {max} characters
 email.invalid.format = The email format is incorrect, please check and try again
 zip.code.invalid.format = The zip code must be exactly 5 digits
 librarian.age.restriction = You must be at least 18 years old to register as a library member
+phone.invalid.format = The phone number is incorrect, please check and try again
