--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -4,7 +4,9 @@ server.port = 8888
 
 spring.messages.basename = ValidationMessages
 
-spring.datasource.url = jdbc:mysql://localhost:3306/librarian
+spring.datasource.url = jdbc:h2:mem:db
+
+#spring.datasource.url = jdbc:mysql://localhost:3306/librarian
 
 spring.datasource.username = root
 
