--- a/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/spring-java20-jahangir-askerov/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8888
 
 spring.messages.basename = ValidationMessages
 
-spring.datasource.url = jdbc:mysql://localhost:3306/library
+spring.datasource.url = jdbc:h2:mem:db
 
 spring.datasource.username = root
 
