--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.show-sql = true
 logging.level.org.hibernate.SQL = debug
 
 logging.level.org.hibernate.type.descriptor.sql = trace
+
+spring.jpa.defer-datasource-initialization = true 
+
+spring.h2.console.enabled = true
