Fix: made changes in multiple methods

--- a/spring/librarian-jahangir-askerov/src/main/resources/ValidationMessages.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/ValidationMessages.properties
@@ -1,7 +1,8 @@
 permission.invalid.format = The permission format is incorrect, please check and try again
 field.empty = This field cannot be empty
 field.length.invalid = This field must be between {min} and {max} characters
+price.fraction.invalid = The fractional part for the price of the book can be a maximum of 2 digits
 email.invalid.format = The email format is incorrect, please check and try again
+phone.invalid.format = The phone number is incorrect, please check and try again
 zip.code.invalid.format = The zip code must be exactly 5 digits
 librarian.age.restriction = You must be at least 18 years old to register as a library member
-phone.invalid.format = The phone number is incorrect, please check and try again
