Added getByCustomerFilter API

--- a/spring/librarian-jahangir-askerov/src/main/resources/ValidationMessages.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/ValidationMessages.properties
@@ -6,3 +6,5 @@ email.invalid.format = The email format is incorrect, please check and try again
 phone.invalid.format = The phone number is incorrect, please check and try again
 zip.code.invalid.format = The zip code must be exactly 5 digits
 librarian.age.restriction = You must be at least 18 years old to register as a library member
+pagination.size.min = Size must be at least 1
+pagination.size.max = Size must be at most 3
