--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -23,3 +23,5 @@ logging.level.org.hibernate.type.descriptor.sql = trace
 spring.jpa.defer-datasource-initialization = true 
 
 spring.h2.console.enabled = true
+
+book.count.limit = 5
