--- a/spring/librarian-jahangir-askerov/pom.xml
+++ b/spring/librarian-jahangir-askerov/pom.xml
@@ -97,7 +97,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>one.stayfocused.spring</groupId>
+			<artifactId>dotenv-spring-boot</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -127,7 +131,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
+
 		<finalName>myApplication</finalName>
 	</build>
 
