--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.application.name = librarian-jahangir-askerov
 
 server.port = 8888
 
-spring.messages.basename = ValidationMessages 
+spring.messages.basename = ValidationMessages, messages_az, messages_en
 
-spring.datasource.url = jdbc:h2:mem:db
+#spring.datasource.url = jdbc:h2:mem:db
 
-#spring.datasource.url = jdbc:mysql://localhost:3306/librarian
+spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 
-spring.datasource.username = root
+spring.datasource.username = ${DB_USER}
 
-spring.datasource.password = 1234
+spring.datasource.password = ${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto = update
 
