Add: redis configuration

--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port = 8888
 
 spring.messages.basename = ValidationMessages, messages_az, messages_en
 
-#spring.datasource.url = jdbc:h2:mem:db
+spring.datasource.url = jdbc:h2:mem:db
 
-spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 spring.datasource.username = ${DB_USER}
 
@@ -25,3 +25,9 @@ spring.jpa.defer-datasource-initialization = true
 spring.h2.console.enabled = true
 
 book.count.limit = 5
+
+spring.cache.type = redis
+spring.cache.cache-names = allBooks
+spring.data.redis.host = ${DB_HOST}
+spring.data.redis.port = ${REDIS_PORT}
+
