--- a/spring/librarian-jahangir-askerov/pom.xml
+++ b/spring/librarian-jahangir-askerov/pom.xml
@@ -102,6 +102,14 @@
 			<artifactId>dotenv-spring-boot</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
