Add: Lending controller

--- a/spring/librarian-jahangir-askerov/src/main/resources/ValidationMessages.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/ValidationMessages.properties
@@ -8,3 +8,7 @@ zip.code.invalid.format = The zip code must be exactly 5 digits
 librarian.age.restriction = You must be at least 18 years old to register as a library member
 pagination.size.min = Size must be at least 1
 pagination.size.max = Size must be at most 3
+bookCategory.min = Book category must be at least {value}.
+pages.min = Page count must be at least {value}.
+fineAmount.min = Fine amount must be at least {value}.
+fineAmount.max = Fine amount cannot exceed {value}.
