Change : application.properties file

--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -29,4 +29,4 @@ book.count.limit = 5
 spring.cache.type = redis
 spring.cache.cache-names = allBooks
 spring.data.redis.host = ${DB_HOST}
-spring.data.redis.port = ${REDIS_PORT}
+spring.data.redis.port = ${REDIS_PORT:6379}
