Add : MongoDB connection

--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.datasource.username = ${DB_USER}
 
 spring.datasource.password = ${DB_PASSWORD}
 
+#mongodb connection for development
+#spring.data.mongodb.uri=mongodb://${MONGODB_HOST}:${MONGODB_PORT}/${MONGODB_NAME}
+
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.show-sql = true
@@ -28,5 +31,5 @@ book.count.limit = 5
 
 spring.cache.type = redis
 spring.cache.cache-names = allBooks
-spring.data.redis.host = ${DB_HOST}
+spring.data.redis.host = ${REDIS_HOST}
 spring.data.redis.port = ${REDIS_PORT:6379}
