Add: docker compose configuration

--- a/spring/librarian-jahangir-askerov/src/main/resources/application.properties
+++ b/spring/librarian-jahangir-askerov/src/main/resources/application.properties
@@ -6,14 +6,14 @@ spring.messages.basename = ValidationMessages, messages_az, messages_en
 
 spring.datasource.url = jdbc:h2:mem:db
 
-#spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#spring.datasource.url = jdbc:mysql://localhost:3306/${MYSQL_DATABASE}
 
-spring.datasource.username = ${DB_USER}
+spring.datasource.username = ${SPRING_DATASOURCE_USERNAME}
 
-spring.datasource.password = ${DB_PASSWORD}
+spring.datasource.password = ${SPRING_DATASOURCE_PASSWORD}
 
 #mongodb connection for development
-#spring.data.mongodb.uri=mongodb://${MONGODB_HOST}:${MONGODB_PORT}/${MONGODB_NAME}
+#spring.data.mongodb.uri=mongodb://localhost:27017/${MONGODB_DATABASE}
 
 spring.jpa.hibernate.ddl-auto = update
 
@@ -31,5 +31,5 @@ book.count.limit = 5
 
 spring.cache.type = redis
 spring.cache.cache-names = allBooks
-spring.data.redis.host = ${REDIS_HOST}
-spring.data.redis.port = ${REDIS_PORT:6379}
+spring.data.redis.host = localhost
+spring.data.redis.port = 6379
