--- a/spring/librarian-jahangir-askerov/Dockerfile
+++ b/spring/librarian-jahangir-askerov/Dockerfile
@@ -1,7 +1,19 @@
-FROM openjdk:21-jdk-slim
+FROM maven:3.9.6-eclipse-temurin-21 AS build
 
-COPY target/myApplication.jar app.jar
+WORKDIR /app
+
+COPY pom.xml .
+
+RUN mvn dependency:go-offline -B
+
+COPY . .
+
+RUN mvn clean package -DskipTests
+
+FROM eclipse-temurin:21-jdk
+
+WORKDIR /app
+
+COPY --from=build /app/target/myApplication.jar app.jar
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
-
-EXPOSE 8888
